--- a/src/main/webapp/css/admin/user/userList.css
+++ b/src/main/webapp/css/admin/user/userList.css
@@ -5,8 +5,22 @@
 .mt-40 {
     margin-top: 40px;
 }
+.query{
+    margin-left: 20px;
+}
+
+.addBtn{
+    margin-left: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 
 .div-tab {
     margin-left: 20px;
-    margin-right: 20px
+    margin-right: 20px;
+    margin-top:20px;
+}
+
+.userModalBtn{
+    width: 100px;
 }
