--- a/src/main/webapp/css/admin/user/userList.css
+++ b/src/main/webapp/css/admin/user/userList.css
@@ -5,11 +5,16 @@
 .mt-40 {
     margin-top: 40px;
 }
-.query{
+
+.query {
     margin-left: 20px;
 }
 
-.addBtn{
+.mr-30 {
+    margin-right: 30px;
+}
+
+.addBtn {
     margin-left: 10px;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -18,9 +23,9 @@
 .div-tab {
     margin-left: 20px;
     margin-right: 20px;
-    margin-top:20px;
+    margin-top: 60px;
 }
 
-.userModalBtn{
+.userModalBtn {
     width: 100px;
 }
